Spacing issues.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,9 +13,8 @@ This is a manifest file that'll automatically include all the stylesheets availa
 html { background-color: #fff; padding: 20 auto; }
 
 body {
-  font-family: "Crimson Text", Times, "Times New Roman", serif;
-  font-size: 18px;
-  width: 960px;
+  font-family: Helvetica, "Crimson Text", Times, "Times New Roman", serif;
+  font-size: 16px;
 }
 
 a img { border: none; }
@@ -30,6 +29,7 @@ a:hover {}
   margin-left:auto;
   margin-right:auto;
   width: 950px;
+  padding: 0;
   /*overflow: auto;*/
 }
 
